force-app/main/default/objects/BusinessPlan__c/BusinessPlan__c.object-meta.xml
<CustomObject>
    <label>경영계획</label>
    <nameField>
        <label>BusinessPlan 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>