force-app/main/default/objects/BusinessPlan__c/fields/ActualSalesAmount__c.field-meta.xml
<CustomField>
    <fullName>ActualSalesAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>발생매출(FS본부전용)</description>
    <label>ActualSalesAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>