force-app/main/default/objects/BusinessPlan__c/fields/ActualSalesAmountProfit__c.field-meta.xml
<CustomField>
    <fullName>ActualSalesAmountProfit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>발생매출이익(FS본부전용)</description>
    <label>ActualSalesAmountProfit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>