force-app/main/default/objects/BusinessPlan__c/fields/EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNumber__c</fullName>
    <externalId>true</externalId>
    <label>EmployeeNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>