force-app/main/default/objects/BusinessPlan__c/fields/ExtId__c.field-meta.xml
<CustomField>
    <fullName>ExtId__c</fullName>
    <description>User.UserName_사원번호_년도_월</description>
    <externalId>true</externalId>
    <label>ExtId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>