force-app/main/default/objects/BusinessPlan__c/fields/fm_BaseDate__c.field-meta.xml
<CustomField>
    <fullName>fm_BaseDate__c</fullName>
    <formula>Date(Year__c ,Value(Text(Month__c)) ,1)</formula>
    <label>fm_BaseDate</label>
    <type>Date</type>
</CustomField>