force-app/main/default/objects/BusinessPlan__c/fields/fm_NAAchieveRate__c.field-meta.xml
<CustomField>
    <fullName>fm_NAAchieveRate__c</fullName>
    <formula>NetAmount__c   / TargetNetAmount__c</formula>
    <label>fm_NAAchieveRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>