force-app/main/default/objects/BusinessPlan__c/fields/fm_SAAchieveRate__c.field-meta.xml
<CustomField>
    <fullName>fm_SAAchieveRate__c</fullName>
    <formula>SalesProfit__c /  TargetSalesProfit__c</formula>
    <label>fm_SAAchieveRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>