force-app/main/default/objects/BusinessPlan__c/fields/fm_SU__c.field-meta.xml
<CustomField>
    <fullName>fm_SU__c</fullName>
    <formula>Text(Owner:User.SU__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fm_SU</label>
    <type>Text</type>
</CustomField>