force-app/main/default/objects/BusinessPlan__c/fields/OrderSalesAmount__c.field-meta.xml
<CustomField>
    <fullName>OrderSalesAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>수주매출(FS본부전용)</description>
    <label>OrderSalesAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>