force-app/main/default/objects/BusinessPlan__c/fields/SalesAmount__c.field-meta.xml
<CustomField>
    <fullName>SalesAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SalesAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>