force-app/main/default/objects/BusinessPlan__c/fields/SalesProfit__c.field-meta.xml
<CustomField>
    <fullName>SalesProfit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SalesProfit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>