force-app/main/default/objects/BusinessPlan__c/fields/TargetNetAmount__c.field-meta.xml
<CustomField>
    <fullName>TargetNetAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TargetNetAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>