force-app/main/default/objects/BusinessPlan__c/fields/TargetSalesProfit__c.field-meta.xml
<CustomField>
    <fullName>TargetSalesProfit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TargetSalesProfit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>