force-app/main/default/objects/BusinessPlan__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
                <label>신규</label>
            </value>
            <value>
                <fullName>EXT</fullName>
                <label>기존</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>