force-app/main/default/objects/BusinessPlan__c/fields/YearMonth__c.field-meta.xml
<CustomField>
    <fullName>YearMonth__c</fullName>
    <externalId>true</externalId>
    <label>YearMonth</label>
    <length>6</length>
    <type>Text</type>
</CustomField>